--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,23 @@
 aniso8601
-asgiref==3.4.1
+asgiref
+certifi==2021.10.8
+charset-normalizer==2.0.10
 Django==4.0.1
+django-cors-headers==3.11.0
+django-create-react-app==0.8.4
 graphene==3.0b7
 graphene-django==3.0.0b7
 graphql-core==3.1.4
 graphql-relay==3.1.0
+idna==3.3
 mysqlclient==2.1.0
 promise==2.3
+requests==2.27.1
 Rx==1.6.1
 singledispatch==3.7.0
 six==1.16.0
+split-settings==1.0.0
 sqlparse==0.4.2
 text-unidecode==1.3
 tzdata==2021.5
+urllib3==1.26.8
