--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,15 +1,24 @@
 {
-  "name": "frontend",
+  "name": "lamaadmin",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.1",
-    "@testing-library/react": "^12.1.2",
-    "@testing-library/user-event": "^13.5.0",
+    "'": "file:mui/material/AppBar'",
+    "@emotion/styled": "^11.6.0",
+    "@material-ui/core": "^4.11.4",
+    "@material-ui/data-grid": "^4.0.0-alpha.29",
+    "@material-ui/icons": "^4.11.2",
+    "@mui/icons-material": "^5.3.1",
+    "@mui/material": "^5.4.0",
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^11.1.0",
+    "@testing-library/user-event": "^12.1.10",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "^5.0.0",
-    "web-vitals": "^2.1.4"
+    "react-router-dom": "^5.3.0",
+    "react-scripts": "4.0.3",
+    "recharts": "^2.0.9",
+    "web-vitals": "^1.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
