--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,24 @@
-aniso8601
-asgiref
+aniso8601==8.1.1
+asgiref==3.4.1
 certifi==2021.10.8
 charset-normalizer==2.0.10
 Django==4.0.1
 django-cors-headers==3.11.0
+django-countries==7.2.1
 django-create-react-app==0.8.4
+django-phonenumber-field==6.0.0
+django-versatileimagefield==2.2
 graphene==3.0b7
 graphene-django==3.0.0b7
 graphql-core==3.1.4
 graphql-relay==3.1.0
 idna==3.3
 mysqlclient==2.1.0
+phonenumbers==8.12.42
+Pillow==9.0.1
 promise==2.3
+python-magic==0.4.25
+python-magic-bin==0.4.14
 requests==2.27.1
 Rx==1.6.1
 singledispatch==3.7.0
