--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,15 +8,19 @@
     "@material-ui/core": "^4.11.4",
     "@material-ui/data-grid": "^4.0.0-alpha.29",
     "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.60",
     "@mui/icons-material": "^5.3.1",
+    "@mui/lab": "^5.0.0-alpha.67",
     "@mui/material": "^5.4.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "react": "^17.0.2",
+    "react-datepicker": "^4.6.0",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-swipeable-views": "^0.14.0",
     "recharts": "^2.0.9",
     "web-vitals": "^1.0.1"
   },
