--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
 aniso8601==8.1.1
 asgiref==3.4.1
 certifi==2021.10.8
-charset-normalizer==2.0.10
 Django==4.0.1
 django-cors-headers==3.11.0
 django-countries==7.2.1
@@ -28,3 +27,43 @@ sqlparse==0.4.2
 text-unidecode==1.3
 tzdata==2021.5
 urllib3==1.26.8
+certifi==2021.10.8
+cffi==1.15.0
+chardet==4.0.0
+charset-normalizer==2.0.11
+click==8.0.3
+colorama==0.4.4
+cryptography==36.0.1
+filelock==3.4.2
+Flask==2.0.2
+huggingface-hub==0.4.0
+idna==3.3
+itsdangerous==2.0.1
+Jinja2==3.0.3
+joblib==1.1.0
+MarkupSafe==2.0.1
+numpy==1.22.2
+packaging==21.3
+pdfminer.six==20211012
+Pillow==9.0.1
+pycparser==2.21
+pyparsing==3.0.7
+PyYAML==6.0
+regex==2022.1.18
+requests==2.27.1
+sacremoses==0.0.47
+scikit-learn==1.0.2
+scipy==1.8.0
+seqeval==1.2.2
+six==1.16.0
+threadpoolctl==3.1.0
+tokenizers==0.11.4
+torch==1.10.0
+torchaudio
+torchvision
+tqdm==4.62.3
+transformers==4.16.2
+typing_extensions==4.0.1
+urllib3==1.26.8
+Werkzeug==2.0.3
+
