--- a/requirements.txt
+++ b/requirements.txt
@@ -1,30 +1,69 @@
 aniso8601==8.1.1
 asgiref==3.4.1
+backports.entry-points-selectable==1.1.0
 certifi==2021.10.8
-charset-normalizer==2.0.10
+cffi==1.15.0
+chardet==4.0.0
+charset-normalizer==2.0.11
+click==8.0.3
+colorama==0.4.4
+cryptography==36.0.1
+distlib==0.3.2
 Django==4.0.1
 django-cors-headers==3.11.0
 django-countries==7.2.1
 django-create-react-app==0.8.4
 django-phonenumber-field==6.0.0
 django-versatileimagefield==2.2
+djangorestframework==3.13.1
+filelock==3.4.2
 graphene==3.0b7
 graphene-django==3.0.0b7
+graphene-file-upload==1.3.0
 graphql-core==3.1.4
 graphql-relay==3.1.0
+huggingface-hub==0.4.0
 idna==3.3
+itsdangerous==2.0.1
+Jinja2==3.0.3
+joblib==1.1.0
+MarkupSafe==2.0.1
+mysql-connector-python==8.0.28
 mysqlclient==2.1.0
+numpy==1.22.2
+packaging==21.3
+pdfminer.six==20211012
 phonenumbers==8.12.42
 Pillow==9.0.1
+platformdirs==2.2.0
 promise==2.3
+pycparser==2.21
+pyparsing==3.0.7
 python-magic==0.4.25
 python-magic-bin==0.4.14
+pytz==2022.1
+PyYAML==6.0
+regex==2022.1.18
 requests==2.27.1
 Rx==1.6.1
+sacremoses==0.0.47
+scikit-learn==1.0.2
+scipy==1.8.0
+seqeval==1.2.2
 singledispatch==3.7.0
 six==1.16.0
 split-settings==1.0.0
 sqlparse==0.4.2
 text-unidecode==1.3
+threadpoolctl==3.1.0
+tokenizers==0.11.4
+torch==1.10.0
+torchaudio==0.10.0
+torchvision==0.11.1
+tqdm==4.62.3
+transformers==4.16.2
+typing_extensions==4.0.1
 tzdata==2021.5
 urllib3==1.26.8
+virtualenv==20.7.2
+Werkzeug==2.0.3
