--- a/requirements.txt
+++ b/requirements.txt
@@ -57,9 +57,9 @@ sqlparse==0.4.2
 text-unidecode==1.3
 threadpoolctl==3.1.0
 tokenizers==0.11.4
-torch==1.10.0
-torchaudio==0.10.0
-torchvision==0.11.1
+torch
+torchaudio
+torchvision
 tqdm==4.62.3
 transformers==4.16.2
 typing_extensions==4.0.1
