--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "'": "file:mui/material/AppBar'",
     "@apollo/client": "^3.5.9",
+    "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.6.0",
     "@material-ui/core": "^4.11.4",
     "@material-ui/data-grid": "^4.0.0-alpha.29",
@@ -21,10 +22,14 @@
     "react-datepicker": "^4.6.0",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.27.0",
+    "react-reveal": "^1.2.2",
     "react-router-dom": "^6.2.1",
     "react-scripts": "4.0.3",
+    "react-scroll": "^1.8.7",
     "react-swipeable-views": "^0.14.0",
+    "react-typed": "^1.2.0",
     "recharts": "^2.0.9",
+    "typewriter-effect": "^2.18.2",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
